fixed table alignment and how it is displayed

--- a/public/css/waiter.css
+++ b/public/css/waiter.css
@@ -70,6 +70,9 @@ h2 {
     background-color: aqua;
     padding: 5px;
 }
+td {
+    text-align: center;
+}
 table {
     width: 55em;
     margin-right: 0px;
